# jenkins-job-manager

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-app.yml
jenkins_job_manager/: cli.py  connect_config.py  core.py  raw_ext.py  xml_change.py
jenkins_job_manager/j2_templates/: default.j2  json.j2  raw_xml_import.j2  yaml.j2
tests/: test_cli.py  test_jenkins_job_manager.py  test_output_render.py  test_output_render.yml  test_poetry_build.py  test_xml_change.py
