[tool.black]
line-length = 88
target-version = ['py36']

[tool.poetry]
name = "jenkins-job-manager"
version = "0.6.7"
description = "A terraform-like wrapper around JJB with some additional features."
authors = ["Jeremy Lavergne <github@lavergne.me>", "Jon Wedaman <jweede@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "*"
jenkins-job-builder = "*"
jinja2 = "*"
python-jenkins = "*"

[tool.poetry.scripts]
jjm = 'jenkins_job_manager.cli:jjm'

[tool.poetry.dev-dependencies]
tomlkit = "*"
pytest = "*"
attrs = "*"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
